Edits to math document to reflect recent model changes
See check list in #183

--- a/100-math-description/cites.bib
+++ b/100-math-description/cites.bib
@@ -19,3 +19,13 @@
   doi = {10.1016/j.fishres.2021.106209},
   note = {doi: \href{https://doi.org/10.1016/j.fishres.2021.106209}{10.1016/j.fishres.2021.106209}},
 }
+
+@inproceedings{dorazio-etal-2011,
+  title = {Modern Methods of Estimating Biodiversity Loss from Presence-Absence Surveys},
+  booktitle = {Biodiversity {{Loss}} in a {{Changing Planet}}},
+  author = {Dorazio, Robert M. and Gotelli, Nicholas J. and Ellison, Aaron M.},
+  editor = {Grillo, Oscar},
+  year = {2011},
+  pages = {277--302},
+  publisher = {{InTech}}
+}
